--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@
 }
 
 .navcontainer{
-    padding-left:0 !important;
-    padding-right:0 !important;
+    padding-left:0; 
+    padding-right:0;  
 }
 
 .welcome{
@@ -48,7 +48,7 @@
 }
 
 .nav-link{
-    font-size:1.5rem !important;
+    font-size:1.5rem;
 }
 
 .homebtn {
