background repeat noo

--- a/css/style.css
+++ b/css/style.css
@@ -57,5 +57,6 @@
 
 body > header > div.jumbotron.jumbotron-fluid{
     background-image:url('../img/KO.jpg');
-    background-size:1280px 270px;
+    background-repeat:no-repeat;
+    background-size:cover;
 }
